Also log client gc